# RobotArmTest

./: .gitignore  CMakeLists.txt  README.md  check_data.m
cfg/: config.json
include/RobotArm/: connection.h  controller.h  jointLimits.h  robotKinematics.h  robotSystem.h  systemLogger.h  trajectory.h  types.h  utils.h
src/: controller.cpp  main.cpp  robotKinematics.cpp  robotSystem.cpp  utils.cpp
